--- a/src/componentes/Login.module.css
+++ b/src/componentes/Login.module.css
@@ -1,13 +1,14 @@
 .log{
     background: white;
-    margin: 160px;
     text-align: center;
     border-radius: 15px;
-    width: 600px;
-    height: 450px;
-    margin-left: 460px;
+    width: 45vw;
+    height: 100%;
     padding-top: 15px;
-    margin-bottom: 100px;
+    margin-top: 19vh;
+    margin-bottom: 20vh;
+    margin-right: 30vw;
+    margin-left: 28vw;
 }
 
 .log form{
@@ -17,17 +18,23 @@
 }
 
 .inp{
-    width: 270px;
+    width: 20vw;
     padding: 7px;
+    margin-right:30px;
+    margin-left: 25px;
+    
 }
 
 .log label{
-    margin-bottom: 8px;
+    margin-bottom: 1%;
+    margin-left: 25px;
+    margin-top: 5%;
 }
 
 .box{
     text-align: justify;
-    margin-top:10px;
+    margin-top:2%;
+    margin-left: 25px;
 }
 
 .box label{
