--- a/src/componentes/button/Button.module.css
+++ b/src/componentes/button/Button.module.css
@@ -1,7 +1,7 @@
 .bnt{
     background-color: rgb(0, 115, 255);
     color: white;
-    width: 280px;
+    width: 21vw;
     padding: 10px;
     border: none;
     border-radius: 5px;
